# spark-ectf

./: .gitignore  Cargo.toml  README.md  global.secrets  test.sh  testflash.sh  testheadless.sh  testupload.sh
decoder/: .gitignore  Cargo.toml  DAPLink_NoReset.hex  Dockerfile  build.py  flash.sh  gdb.sh  gen_subscription.py  openocd.gdb  openocd.sh  requirements.txt
decoder/.cargo/: config.toml
decoder/examples/: trng-rand.rs  uartsimple.rs
decoder/secrets/: public  signature
decoder/src/: console.rs  flash.rs  host_messaging.c  main.rs  subscription.rs
design/: pyproject.toml
design/ectf25_design/: encoder.py  gen_secrets.py  gen_subscription.py  prime_gen.py
design/ectf25_design.egg-info/: SOURCES.txt
frames/: x_c0123.json
proofofconcept/: anti-piracy.py  exp.py  proof.py  proof2.py  proof3.py  proof4.py
proofofconcept/env/: pyvenv.cfg
proofofconcept/powmod/: powmod.c  setup.py
proofofconcept/powmod/vector-master/: CMakeLists.txt
secrets/: secrets.json
spark-decoder/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  flash.sh  gdb.sh  memory.x  openocd.cfg  openocd.gdb  openocd.sh
spark-decoder/.cargo/: config.toml
spark-decoder/examples/: blinky.rs  flashy.rs  flashy2.rs  trng-rand.rs  uart-simple.rs
spark-decoder/src/: console.rs  flash.rs  main.rs  subscription.rs
spark-ectf/: Cargo.toml
