[package]
name = "spark-decoder"
authors = ["bruberu, xnossisx, Garrick-Pkwy, xXThr0wnshadeXx"]
edition = "2021"
publish = false

[build]
targets = ["thumbv7em-none-eabi"]

[profile.release]
strip=true
opt-level = "z"
lto=true
codegen-units = 1
panic = "abort"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
max7800x-hal = "0.6.1"
panic-halt = "1.0.0"
rug = { version = "1.27.0", features = ["integer"], default-features = false }


# Uncomment if you want to use semihosting,
# cortex-m-semihosting = "0.5"
