[package]
name = "spark-decoder"
authors = ["bruberu, xnossisx, Garrick-Pkwy, xXThr0wnshadeXx"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]
lto=true

[profile.dev]
opt-level = 3        # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
lto=true

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"], default-features = false }
cortex-m-rt = { version = "0.7.5", features = ["set-sp", "set-vtor"], default-features = false }
max7800x-hal = { version = "0.7.0", default-features = false }
panic-halt = "1.0.0"
crypto-bigint = { version = "0.7.0-pre.0", default-features = false }
#rand = { version = "0.9.0", default-features = false, optional = true }
embedded-alloc = { version = "0.6.0", default-features = false, features = ["llff"] }
bytemuck = { version = "1.21.0", default-features=false }
hmac-sha512 = "1.1.6"
embedded-io = "0.6.1"
blake3 = { version = "1.6.1", default-features = false }
#getrandom = { version = "0.2.15", features = ["custom"] }

#rug = {version = "1.27.0", features = ["integer"], default-features = false }
#gmp-mpfr-sys = { version = "1.6.4", default-features = false, features = [ "force-cross", "use-system-libs" ] }
#libc = {version = "0.2.169", default-features = false, features = ["const-extern-fn"]}

# Uncomment if you want to use semihosting,
# cortex-m-semihosting = "0.5"